added tamil translation

--- a/src/assets/i18n/தமிழ்.json
+++ b/src/assets/i18n/தமிழ்.json
@@ -6,13 +6,13 @@
         "support":"ஆதரவு",
         "help":"உதவி",
         "kisan_ki_dukan":"கிசான் கி டுகான். அனைத்து உரிமைகளும் பாதுகாக்கப்பட்டவை",
-        "footer_description":"We are a young company always looking for new and creative ideas to help you with our products in your everyday work.",
-        "our_team":"Our Team",
-        "sapientrazorfish_Gurgaon":" SapientRazorfish,Gurgaon",
-        "phone":"Phone",
-        "email":"Email",
-        "skype":"Skype",
-        "follow_us":"Follow Us"
+        "footer_description":"உங்கள் அன்றாட வேலைகளில் எங்கள் தயாரிப்புகள் உங்களுக்கு உதவ புதிய மற்றும் ஆக்கப்பூர்வமான யோசனைகளைத் தேடும் ஒரு இளம் நிறுவனம் எப்போதும்.",
+        "our_team":"எங்கள் அணி",
+        "sapientrazorfish_Gurgaon":" செபிஎன்ட் ரேசொரபிஷ், குர்கான்",
+        "phone":"தொலைபேசி எண் ",
+        "email":"மின்னஞ்சல்",
+        "skype":"ஸ்கைப்",
+        "follow_us":"எங்களை பின்தொடரவும்"
     },
     "body":{
         "kisan_ki_dukan":"கிசான் கி டுகான்",
@@ -22,7 +22,7 @@
         "previous":"முந்தைய",
         "next":"அடுத்த",
         "welcome":"வரவேற்பு",
-        "about":"About",
+        "about":"பற்றி",
         "about_description":"கிசான் கி டுகன் (KKD) திட்டம், பண்ணையில் இருந்து வாடிக்கையாளருக்கு நேரடியாக பொருட்களை விநியோகிப்பதில் கவனம் செலுத்துகிறது.நமக்கு தெரிந்தவாறு,அது பண்ணையில் இருந்து இல்லையென்றால் புதியது அல்ல.எனவே,விவசாயிகள் தங்கள் பொருட்களை விற்க சரியான வாடிக்கையாளர்களுடன் தொடர்பு கொள்ளக்கூடிய ஒரு தளத்தை விவசாயிகளுக்கும் வாடிக்கையாளர்களுக்கும் வழங்குவதன் மூலம் ஒரு ஆன்லைன் அணுகுமுறை நடைமுறைப்படுத்தப்படுகிறது மற்றும் அதேபோல வாடிக்கையாளர்களும் தங்கள் இருப்பிடம் மற்றும் விலையை அடிப்படையாகக் கொண்டு விவசாயிகளிடமிருந்து பொருட்களை பெற்றுக் கொள்ளலாம் மற்றும் அவற்றின் பயன்பாட்டிற்கான தரமான மூலப்பொருட்களைப் பெறலாம்.",
         "farmer_joined":"விவசாயிகள் இணைந்தனர்",
         "kg_vegetables_sold":"கிலோ காய்கறிகள் விற்கப்பட்டன ",
@@ -71,16 +71,16 @@
         "my_account":"என் கணக்கு",
         "logout":"வெளியேறு",
         "my_cart":"என் வணிக வண்டி",
-        "dashboard":"Dashboard",
-        "change_city":"Change City",
-        "delhi":"Delhi",
-        "mumbai":"Mumbai",
-        "chandigarh":"Chandigarh",
-        "ahmedabad":"Ahmedabad",
-        "hyderabad":"Hyderabad",
-        "chennai":"Chennai",
-        "cancel":"Cancel",
-        "save":"Save"
+        "dashboard":" டேஷ்போர்டில்",
+        "change_city":"நகரம் மாற்றவும்",
+        "delhi":"தில்லி",
+        "mumbai":"மும்பை",
+        "chandigarh":"சண்டிகர்",
+        "ahmedabad":"அகமதாபாத்",
+        "hyderabad":"ஹைதெராபாத்",
+        "chennai":"சென்னை",
+        "cancel":"ரத்து செய்",
+        "save":"சேமி"
     },
     "support":{
        "support":"ஆதரவு",
@@ -154,7 +154,7 @@
         "please_enter_qantity":"அளவை குறிப்பிடவும் ",
         "close":"வெளியேறு ",
         "proceed":"தொடர்",
-        "enter_qantity":"Enter Quantity"
+        "enter_qantity":"அளவை குறிப்பிடவும்"
     },
     "policy":{
         "policies":"கொள்கைகள்",
@@ -249,16 +249,16 @@
         "change_password":"கடவுச்சொல்லை மாற்றவும்",
         "alternate_mobile":"மாற்று தொலைபேசி எண் ",
         "delete_profile":"கணக்கை நீக்குக ",
-        "current_address":"Current Address",
-        "alternate":"Alternate",
-        "current":"Current",
-        "places_where_i_can_deliver":"Places where i can deliver",
-        "aadhaar_address":"Aadhaar Address",
-        "bank_details":"Bank Details",
-        "account_owner":"Account Owner",
-        "account_name":"Account Name",
-        "account_ifsc":"Account IFSC",
-        "profile":"Profile"
+        "current_address":"தற்போதைய முகவரி",
+        "alternate":"மாற்று",
+        "current":"தற்போதைய",
+        "places_where_i_can_deliver":"நான் வழங்கக்கூடிய இடங்கள்",
+        "aadhaar_address":"ஆதார் முகவரி",
+        "bank_details":"வங்கி விவரங்கள்",
+        "account_owner":"கணக்கு வைத்திருப்பவர்",
+        "account_name":"கணக்கின் பெயர்",
+        "account_ifsc":"கணக்கு ஐஎப்எஸ்சி ",
+        "profile":"விவரம்"
     },
     "add_address":{
         "add_alternate_address":"மாற்று முகவரி",
@@ -305,14 +305,14 @@
         "enter_current_password":"தற்போதைய கடவுச்சொல்லை உள்ளிடவும்",
         "current_password_required":"தற்போதைய கடவுச்சொல் தேவை",
         "delete":"நீக்குக",
-        "enter_otp":"Enter OTP",
-        "otp_is_required":"OTP is required",
-        "less_then_10_digit":"less then 10 digit",
-        "more_then_10_digit":"more then 10 digit",
-        "mobile_number_is_required":"Mobile Number is required",
-        "verify_otp":"Verify otp",
-        "enter_mobile_number":"Enter Mobile Number"
-    },
+        "enter_otp":"ஓ டி பி  ஐ உள்ளிடவும்",
+        "otp_is_required":"ஓ டி பி தேவை",
+        "less_then_10_digit":"10 இலக்கங்கள் குறைவாக",
+        "more_then_10_digit":"10 க்கும் மேற்பட்ட இலக்கங்கள்",
+        "mobile_number_is_required":"தொலைபேசி எண் தேவை",
+        "verify_otp":"ஓ டி பியை சரிபார்க்கவும்",
+        "enter_mobile_number":"தொலைபேசி எண்ணை உள்ளிடவும்"
+    }, 
     "farmer_add_product":{
         "upload_product":"தயாரிப்பை பதிவேற்றுக ",
         "choose_product_name":"தயாரிப்பு பெயரைத் தேர்வு செய்க",
@@ -347,10 +347,10 @@
         "more_than_6_characters_not_allowed":"6 க்கும் மேற்பட்ட எழுத்துக்கள் அனுமதிக்கப்படாது",
         "minimun_6_digits_are_required":"குறைந்தபட்சம் 6 இலக்கங்கள் தேவைப்படுகின்றன",
         "save_details":"விவரங்களைச் சேமிக்கவும்",
-        "more_than_10_characters_not_allowed":"More than 6 characters not allowed",
-        "minimun_10_digits_are_required":"Minimum 6 digits are required",
-        "mobile_number":"Mobile Number",
-        "mobile_number_required":"Mobile number is required"
+        "more_than_10_characters_not_allowed":"6 க்கும் மேற்பட்ட எழுத்துக்கள் அனுமதிக்கப்படாது",
+        "minimun_10_digits_are_required":"குறைந்தபட்சம் 6 இலக்கங்கள் தேவைப்படுகின்றன",
+        "mobile_number":"தொலைபேசி எண்",
+        "mobile_number_required":"தொலைபேசி எண் தேவை"
     },
     "farmer_current_order":{
         "customer_id":"வாடிக்கையாளர் அடையாள எண்",
