--- a/src/assets/i18n/தமிழ்.json
+++ b/src/assets/i18n/தமிழ்.json
@@ -154,7 +154,10 @@
         "please_enter_qantity":"அளவை குறிப்பிடவும் ",
         "close":"வெளியேறு ",
         "proceed":"தொடர்",
-        "enter_qantity":"Enter Quantity"
+        "enter_qantity":"Enter Quantity",
+        "showing":"Showing",
+        "results_of":"results of",
+        "for":"for"
     },
     "policy":{
         "policies":"கொள்கைகள்",
